--- a/redacted/templates/index.html
+++ b/redacted/templates/index.html
@@ -76,7 +76,7 @@
     <div class="row">
         <div class="span10 module ">
             <h1 class="withTip textReplace">The News Without Transparency</h1>
-            <p class="intro">Giving you a glimpse of what the news would look like in a world where government wasn't forced to provide public access to information through laws and regulations.</p>
+            <p class="intro">Giving you a glimpse of the news in a world without public access to information.</p>
         </div>
         <div class="span2">
             <div id="share-buttons"></div>
