--- a/redacted/templates/index.html
+++ b/redacted/templates/index.html
@@ -55,7 +55,7 @@
 
             ua.setLinkBack("http://redacted.sunlightfoundation.com/");
             ua.setTitle("The News Without Transparency");
-            ua.setDescription("Giving you a glimpse of what the news would look like in a world where government wasn't forced to provide public access to information through laws and regulations.");
+            ua.setDescription("Giving you a glimpse of the news in a world without public access to government information.");
 
             var params = {
                 containerID: 'share-buttons',
@@ -76,7 +76,7 @@
     <div class="row">
         <div class="span10 module ">
             <h1 class="withTip textReplace">The News Without Transparency</h1>
-            <p class="intro">Giving you a glimpse of the news in a world without public access to information.</p>
+            <p class="intro">Giving you a glimpse of the news in a world without public access to government information.</p>
         </div>
         <div class="span2">
             <div id="share-buttons"></div>
