--- a/redacted/templates/index.html
+++ b/redacted/templates/index.html
@@ -28,6 +28,7 @@
             border: 1px solid #d4cfc6;
             float: left;
             height: 160px;
+            margin-bottom: 2em;
             margin-right: 1em;
             width: 120px;
         }
